--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <a href="#">Home</a>
 <a href="#">Notícias</a>
 <a href="#">Curiosidades</a>
-<a href="#">Fale Conosco</a>
 </nav>
 
 <main>
@@ -102,7 +101,7 @@ a
 
 <footer>
 
-    <p>Site criado por <a href="https://github.com/VitorDEV95" target="_blank">Vitor Marques</a> para o curso em video</p>
+    <p>Site criado por <a href="https://github.com/VitorDEV95" target="_blank">Vitor Marques</a> </p>
 </footer>
 
 
